--- a/shetuan/WebContent/finishself.html
+++ b/shetuan/WebContent/finishself.html
@@ -39,7 +39,7 @@
 								<tr>
 									<form action="#">
 							            <label for="addr-show">您选择的是：
-							                <input type="text" value="" id="addr-show">
+							                <input type="text" value="" id="addr-show" name="city">
 							            </label>
 							            <br/>
 							
