--- a/shetuan/WebContent/finishself.html
+++ b/shetuan/WebContent/finishself.html
@@ -62,10 +62,10 @@
 							<tr>
 								<th>年级</th>
 								<th><select name="nj">
-					           		<option value="1">大一</option>
-					            	<option value="2">大二</option>
-					            	<option value="3">大三</option>
-					            	<option value="4">大四</option>
+					           		<option value="大一">大一</option>
+					            	<option value="大二">大二</option>
+					            	<option value="大三">大三</option>
+					            	<option value="大四">大四</option>
 					            	</select>
 								</th>
 								</tr>
